--- a/Assignment_14/Assignment_14.tex
+++ b/Assignment_14/Assignment_14.tex
@@ -313,7 +313,7 @@ Using properties \eqref{eq:eq_22}, \eqref{eq:eq_23}, the above equation can be e
 \begin{align}
     \vec{T}(\alpha \vec{z} + \vec{w}) &=  
     \myvec{\vec{A} & \vec{B}} (\vec{I} \otimes (\alpha \vec{z})) +
-    \myvec{\vec{A} & \vec{B}} (\vec{I} \otimes \vec{x}) \nonumber \\
+    \myvec{\vec{A} & \vec{B}} (\vec{I} \otimes \vec{w}) \nonumber \\
     &= \alpha \myvec{\vec{A} & \vec{B}} (\vec{I} \otimes \vec{z}) + 
     \myvec{\vec{A} & \vec{B}} (\vec{I} \otimes \vec{w}) \nonumber \\ 
     &= \alpha \vec{T} (\vec{z}) + \vec{T} (\vec{w})\label{eq:eq_5}
