--- a/Assignment_16/Assignment_16.tex
+++ b/Assignment_16/Assignment_16.tex
@@ -309,26 +309,77 @@ Let the indexed vector sets,
 \begin{align}
     \vec{V} = \{f_1, f_2, f_3\}; \: \vec{V}^* = \{\alpha_1, \alpha_2, \alpha_3\} \nonumber 
 \end{align}
-To prove \eqref{eq:2_1}, we have to prove that elements pair have an inner product equal to 1 if the indexes are equal, and equal to 0 otherwise. 
-\begin{align} \label{eq:4_1}
-    \implies f_i^T\alpha_j = \delta_j^{i} = 
-    \bigg\{_{0; \quad if \: i \neq j}^{1; \quad if \: i = j} 
-\end{align}
-where, $\delta_j^{i}$ is the kronecker delta symbol.
-Now,
+1. Let,
 \begin{align}
-    f_1^T\alpha_1 = \myvec{1 \\ \frac{1}{2} \\ \frac{1}{3}}^T 
-    \myvec{1 \\ 1 \\ -\frac{3}{2}} = 1 \label{eq:4_2} \\
-    f_1^T\alpha_2 = \myvec{1 \\ \frac{1}{2} \\ \frac{1}{3}}^T 
-    \myvec{-\frac{1}{6} \\ 0 \\ \frac{1}{2}} = 0 \label{eq:4_3}
+    \vec{p^\prime} = \vec{c}^T\vec{x} \label{eq:4_1}
+\end{align}
+where,
+\begin{align}
+    \vec{c} = \myvec{c_0 \\ c_1 \\ c_2}; \quad 
+    \vec{x} = \myvec{1 \\ x \\ x^2} \nonumber
+\end{align}
+2. Representing the functionals as vector,
+\begin{align}
+    \vec{f} = \myvec{f_1 \\ f_2 \\ f_3} \label{eq:4_2}
+\end{align}
+3. Representing the integrations as vector,
+\begin{align}
+    \vec{I} = \myvec{\int_{0}^{1} \, dx \\ \int_{0}^{2} \, dx \\
+    \int_{0}^{-1} \, dx} \label{eq:4_3}
+\end{align}
+4. So,
+\begin{align}
+    \vec{f} = \vec{I} \vec{c}^T \vec{x} = \vec{I} \vec{p^\prime} \label{eq:4_4}
+\end{align}
+\eqref{eq:4_4} can written in matrix format as,
+\begin{align}
+    \vec{f} = \vec{P} \vec{c} \label{eq:4_5}
+\end{align}
+where,
+\begin{align}
+    \vec{P}  = \myvec{1 & \frac{1}{2} & \frac{1}{3} \\ 2 & 2 & \frac{8}{3} \\ -1 & \frac{1}{2} & \frac{-1}{3}} \label{eq:4_6}
+\end{align}
+5. $\vec{P}$ is one-one if it has a inverse. Calculating the determinant of $\vec{P}$,
+\begin{align}
+    \implies \mydet{P} = -2 \label{eq:4_7}
+\end{align}
+From, \eqref{eq:4_7}, $\vec{P}$ is one-one. Also,
+\begin{align}
+    \vec{V} = \vec{f}^T = \myvec{f_1 & f_2 & f_3} \label{eq:4_8} 
+\end{align}
+From \eqref{eq:4_5}, \eqref{eq:4_7} and \eqref{eq:4_8}, the rows of $\vec{P}$ are isomorphic to $\vec{V}$. So, finding the dual basis by performing matrix operations on $\vec{P}^T$
+\begin{align}
+    \myvec{1 & 2 & -1 & 1 & 0 & 0 \\
+    \frac{1}{2} & 2 & \frac{1}{2} & 0 & 1 & 0\\
+    \frac{1}{3} & \frac{8}{3} & \frac{-1}{3} & 0 & 0 & 1} \xleftrightarrow[R_2\leftarrow R_2-\frac{R_1}{2}]{R_3\leftarrow R_3-\frac{R_1}{3}} \nonumber \\
+    \myvec{1 & 2 & -1 & 1 & 0 & 0 \\ 
+    0 & 1 & 1 & \frac{-1}{2} & 1 & 0 \\
+    0 & 2 & 0 & \frac{-1}{3} & 0 & 1}
+    \xleftrightarrow[]{R_3 \leftarrow \frac{R_3-2R_2}{-2}} \nonumber
 \end{align}
 \begin{align}
-    f_1^T\alpha_3 = \myvec{1 \\ \frac{1}{2} \\ \frac{1}{3}}^T 
-    \myvec{-\frac{1}{3} \\ 1 \\ -\frac{1}{2}} = 0 \label{eq:4_4}
+    \myvec{1 & 2 & -1 & 1 & 0 & 0 \\ 
+    0 & 1 & 1 & \frac{-1}{2} & 1 & 0 \\
+    0 & 0 & 1 & \frac{-1}{3} & 1 & \frac{-1}{2}} 
+    \xleftrightarrow[R_2 \leftarrow R_2 - R_3]{R_1 \leftarrow R_1 + R_3} \nonumber \\
+    \myvec{1 & 2 & 0 & \frac{2}{3} & 1 & \frac{-1}{2} \\ 
+    0 & 1 & 0 & \frac{-1}{6} & 0 & \frac{1}{2} \\
+    0 & 0 & 1 & \frac{-1}{3} & 1 & \frac{-1}{2}} 
+    \xleftrightarrow[]{R_1\leftarrow R_1-2R_2} \nonumber
 \end{align}
-Similarly, the same can be proved for $f_2, f_3$ as well in the same manner as \eqref{eq:4_2}-\eqref{eq:4_4}. Hence we can tell that,
 \begin{align}
-    \vec{V}^T\vec{V^*} &= \vec{I} \nonumber \\
-    \implies \vec{V^*} &= (\vec{V}^T)^{-1}
+    \myvec{1 & 0 & 0 & 1 & 1 & \frac{-3}{2} \\
+    0 & 1 & 0 & \frac{-1}{6} & 0 & \frac{1}{2} \\
+    0 & 0 & 1 & \frac{-1}{3} & 1 & \frac{-1}{2}} \label{eq:4_9}
+\end{align}
+From \eqref{eq:4_9}, the dual of $\vec{V} \implies \vec{V^*}$ can be written as,
+\begin{align}
+    \vec{V^*} = \myvec{\alpha_1 & \alpha_2 & \alpha_3} \label{eq:4_10}
+\end{align}
+where,
+\begin{align}
+    \alpha_1 &= 1 + x - \frac{3}{2}x^2 \\
+    \alpha_2 &= \frac{-1}{6} + \frac{1}{2}x^2 \\
+    \alpha_3 &= \frac{-1}{3} + x + \frac{-1}{2}x^2
 \end{align}
 \end{document}
