--- a/Assignment_19/Assignment_19.tex
+++ b/Assignment_19/Assignment_19.tex
@@ -262,7 +262,35 @@ If A is a complex $5 \times 5$ matrix with characteristic polynomial $f = (x-2)^
 %
 %
 \section{Theory}
-For an eigenvalue $\lambda$, (1) the multiplicity of $\lambda$ in the characteristic polynomial determines the size of the Jordan block for that eigenvalue. (2) the multiplicity of $\lambda$ in the minimal polynomial determines the size of the largest sub-block (Elementary Jordan block). Let $f$ and $p$ be the characteristic and minimal polynomials of a matrix,
+\begin{table}[ht]
+\begin{center}
+\begin{tabular}{|c|c|}
+\hline
+& \\
+Jordan block & For an eigenvalue $\lambda$ \\
+& \\
+\hline
+
+& \\
+characteristic & The multiplicity of $\lambda$\\
+polynomial & in the characteristic polynomial\\
+& determines the size of the\\
+& Jordan block for that eigenvalue.\\
+& \\
+\hline
+
+& \\
+minimal & The multiplicity of $\lambda$\\
+polynomial & in the minimal polynomial \\
+& determines the size of\\
+& the largest sub-block\\
+& (Elementary Jordan block). \\
+& \\
+\hline
+\end{tabular}
+\end{center}
+\end{table}
+Let $f$ and $p$ be the characteristic and minimal polynomials of a matrix,
 \begin{align}
     f = (x-\lambda_1)^3 \label{eq:2_1} \\
     p = (x-\lambda_1)^2 \label{eq:2_2}
